[package]
name = "epd-esp32"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", default-features = false }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", optional = true, default-features = false }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", optional = true, default-features = false }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", optional = true, default-features = false }

epd-waveshare = {path = ".."}
embedded-hal = { version = "1.0.0-rc.1" }
embedded-graphics = "0.8.1"

[build-dependencies]
embuild = "0.31.2"

[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
